# zview

./: .bazelrc  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD  MODULE.bazel  README.md  WORKSPACE  requirements.txt  snapcraft.yaml  zview_gui.pro  zview_inf.pro
models/: BUILD  horse.ply  horse.stl  lucy.pcd  lucy_mesh.ply
packaging/: BUILD  build_wheels.sh  create_debian_package.sh  description.md  description.txt  zview_version.bzl
pyzview/: BUILD  pyzview.py  pyzview_inf.cpp  pyzview_test.py
pyzview/tests/: pyzview_test.py
res/: create_debian_package.sh  create_msi_packge.iss  res.qrc  zview.desktop
shaders/: BUILD  edges.fs  edges.vs  grid.fs  grid.vs  mesh.fs  mesh.vs  picking.fs  picking.vs  point.fs  point.vs  simple-shader.fs  simple-shader.vs
src/: BUILD  vulkan_test.cpp  zview.cpp  zview.h  zview_binary.cpp  zview_interface_test.cpp  zview_main.cpp
src/drawables/: BUILD  axis.cpp  axis.h  backdrop.cpp  backdrop.h  grid.cpp  grid.h  picking_texture.cpp  picking_texture.h  shape_buffer.cpp  shape_buffer.h  shape_draw_visitor.cpp  shape_draw_visitor.h  shape_init.cpp  shape_init.h  shape_init_visitor.cpp  shape_init_visitor.h  shape_update_visitor.cpp  shape_update_visitor.h  vp_mat.cpp  vp_mat.h
src/geometry/: BUILD  mvp_mat.cpp  mvp_mat.h
src/graphics_backend/: BUILD  frame_buffer.cpp  frame_buffer.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  opengl_shader.cpp  opengl_shader.h  shader.cpp  shader.h
src/graphics_backend/shader_code/: BUILD  grid_shader_code.h  pcl_shader_code.h  picking_shader_code.h
src/io/: BUILD  read_file.cpp  read_file.h  read_ply.cpp  read_ply.h  shared_mem.cpp  shared_mem.h  write_ply.cpp  write_ply.h
src/opengl_backend/: BUILD  opengl_shader.cpp  opengl_shader.h
src/params/: BUILD  params.cpp  params.h
src/types/: BUILD  external_types.h  types.cpp  types.h
src/ui/: BUILD  input_device_handler.cpp  input_device_handler.h  main_app.cpp  main_app.h  tree_view.cpp  tree_view.h  vp_mat.cpp  vp_mat.h  zview_main_app.cpp  zview_main_app.h
src/utils/: recast.h
test/: BUILD  main.cpp
zview/: BUILD  zview_binary.cpp  zview_inf.cpp  zview_inf.h  zview_inf_impl.cpp  zview_inf_impl.h
zview/backend/: BUILD  vp_mat.cpp  vp_mat.h
zview/backend/shared_memory/: shared_memory_manager.cpp  shared_memory_manager.h
zview/backend/state_machine/: state_machine.cpp  state_machine.h  track_state_measure_distance.cpp  track_state_measure_distance.h  track_state_retarget.cpp  track_state_rotate.cpp
zview/common/: BUILD  common_types.cpp  common_types.h  mem_stream.h  memstream.cpp  memstream.h  params.cpp  params.h  version.h
zview/drawables/: BUILD  axis.cpp  axis.h  backdrop.cpp  backdrop.h  grid.cpp  grid.h  picking_texture.cpp  picking_texture.h  shape_buffer.cpp  shape_buffer.h  shape_draw_visitor.cpp  shape_draw_visitor.h  shape_init_visitor.cpp  shape_init_visitor.h  shape_update_visitor.cpp  shape_update_visitor.h  statusbar.cpp  statusbar.h
zview/geometry/: BUILD  mvp_mat.cpp  mvp_mat.h
zview/graphics_backend/: BUILD  frame_buffer.cpp  frame_buffer.h  imgui_impl_opengl3.cpp  shader.cpp
zview/graphics_backend/shader_code/: BUILD  edges_shader_code.h  mesh_shader_code.h  pcl_shader_code.h
zview/gui/: canvas.cpp  canvas.h  main_window.cpp  zview_main.cpp
zview/gui/drawables/: BUILD  axes.cpp  (+12 more)
zview/interface/: zview_inf.h  zview_inf_impl.cpp  zview_inf_impl.h
zview/io/: BUILD  read_file.cpp  read_file.h  read_file_list.cpp  read_file_list.h  read_ply.cpp  read_ply.h  reader_abs.h  reader_pcd.cpp  reader_pcd.h  reader_ply.cpp  reader_ply.h  write_ply.cpp  write_ply.h  write_shape_to_file.cpp  write_shape_to_file.h
zview/params/: BUILD  params.cpp  params.h
zview/types/: BUILD  types.cpp  types.h
zview/ui/: BUILD  input_device_handler.cpp  input_device_handler.h  tree_view.cpp  tree_view.h
zview/utils/: BUILD
(+19 files in other folders)
